# vigilAI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.frontend  Dockerfile.nginx  README.md  design.md  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  package-lock.json  requirements.md  start-all.bat  test-login.js
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
python/.hypothesis/constants/: 0f27ff024415518f  2670d70f4f602ad3  2b784d5e1bfab48f  2c575d1978b4f9cd  4223dfdab49a2f5c  4758a03e47a12326  4c7f438ce88add08  5324ed435c672c4e  535cd9d6d090451a  6224259fcbeaadcb  86aa2958ff71fc42  8834be761049e50f  ac59657b5394fc7b  b1a2fc4e9911561c  d874491591d3d228  db15fe91f5c2787e
python/.hypothesis/examples/04e6b3400353b141/: 29143a8828367854  4c2cdf39c77566e1  56f41cbdea88ddbc  576cb4de93a4668d  61d776ca0fab8ba2  75969069c1071b8e  865ad2170afaf688  (+5 more)
python/.hypothesis/tmp/: tmp34g9v1pa  tmp3sdsbcfu  tmpa0hs4vsw  tmpa63vhw9v  tmpc22017cn  tmpgt0qjeqh  tmpnn5wcp47  tmpq2lj68mf  tmpw7b5qmbw
python/examples/: django_example.py  fastapi_example.py
python/src/vigilai/: __init__.py  ai_diagnostician.py  anomaly_detector.py  api_client.py  code_generator.py  config.py  github_integrator.py  monitoring_agent.py  redactor.py  types.py  vigilai.py
python/tests/: __init__.py  test_config.py  test_data_transmission_properties.py  test_django_middleware.py  test_fastapi_middleware.py  test_manual_instrumentation.py  test_monitoring_agent.py  test_monitoring_agent_properties.py  test_non_blocking_verification.py
(+262 files in other folders)
